# oil

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  benchmark.sh  install.sh  skills-lock.json  todo.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CLI.md  DEVELOPMENT.md  LINUX_SUPPORT.md  PHASE2_SUMMARY.md  TROUBLESHOOTING.md
docs/windows-notes/: UNIFIED_SOURCES.md
src/: api.rs  apt_hooks.rs  bottle.rs  builder.rs  cache.rs  cask.rs  chocolatey.rs  deps.rs  discovery.rs  ecosystem_install.rs  formula_parser.rs  install.rs  lockfile.rs  main.rs  package_spec.rs  remote_search.rs  scoop.rs  signal.rs  sudo.rs  system_pm.rs  tap.rs  ui.rs  windows_state.rs  winget_install.rs
src/commands/: apt_hooks.rs  bundle.rs  doctor.rs  hooks.rs  info.rs  install.rs  link.rs  list.rs  mod.rs  path.rs  reinstall.rs  search.rs  self_update.rs  services.rs  show_deps.rs  source.rs  sync.rs  uninstall.rs  upgrade.rs  version_install.rs
src/hooks/: apk.rs  apt.rs  brew.rs  core.rs  dnf.rs  mod.rs  nix.rs  pacman.rs  xbps.rs
src/system/: distro.rs  generations.rs  installer.rs  manifest.rs  mod.rs  resolver.rs  scripts.rs
src/system/extractor/: apk.rs  deb.rs  mod.rs  nar.rs  rpm.rs
src/system/registry/: apk.rs  apt.rs  dnf.rs  eopkg.rs  flatpak.rs  mod.rs  nix.rs  opkg.rs  pacman.rs  snap.rs  xbps.rs
tests/: cli.rs
