[package]
name = "oil"
version = "0.2.0"
edition = "2021"
authors = ["Oil Contributors"]
description = "Native package manager for Alpenglow and general use"
license = "MPL-2.0"
repository = "https://github.com/semitechnological/oil"
homepage = "https://github.com/semitechnological/oil"
readme = "README.md"
keywords = ["package-manager", "system", "cli", "alpenglow"]
categories = ["command-line-utilities", "system"]
exclude = [
    "build/*",
    ".poc/*",
    "assets/*",
    "docs/*",
    "benchmark.sh",
    ".github/*",
    "tests/*",
]

[features]
# OS-gated system registries — disable what you don't need to cut binary size
default = ["system-all"]
system-all = ["system-apt", "system-dnf", "system-pacman", "system-apk", "system-xbps", "system-brew", "system-nix"]
# system-brew: Linuxbrew (Homebrew on Linux)
system-apt = []
system-dnf = []
system-pacman = []
system-apk = []
system-xbps = []
system-brew = []
system-nix = []
platform-linux = []
platform-macos = []
platform-windows = []

[[bin]]
name = "oil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
clap_complete = "4"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "gzip"] }
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

indicatif = "0.18"
console = "0.16"
inquire = "0.9"

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

tar = "0.4"
flate2 = "1"
sha2 = "0.11"
hex = "0.4"
tempfile = "3"
regex = "1"
libc = "0.2"
nix = { version = "0.31", features = ["user", "process"] }

dunce = "1"
ctrlc = "3"
num_cpus = "1"
shellexpand = "3"
urlencoding = "2.1.3"
zstd = "0.13"
xz2 = "0.1"
bzip2 = "0.6"
quick-xml = { version = "0.40", features = ["async-tokio"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
serde_yaml = "0.9"
rayon = "1"
